# ScriptioContinuaSegmenter

./: .gitignore  README.md  pyproject.toml  test.ipynb
.github/workflows/: ci_cd.yaml
scripts/benchmark/: benchmark.sh  compute_scores.py  launch_scorer.sh  results_paper.ipynb
scripts/benchmark/results/: grc_BAYESIAN.csv  grc_BAYESIAN_binary_1_segments.txt  grc_BAYESIAN_segments.txt  grc_HIERARCHICAL.csv  grc_HIERARCHICAL_binary_10_segments.txt  grc_HIERARCHICAL_binary_15_segments.txt  grc_HIERARCHICAL_binary_3_segments.txt  grc_HIERARCHICAL_quadri_10_segments.txt  grc_HIERARCHICAL_quadri_15_segments.txt  grc_HIERARCHICAL_quadri_3_segments.txt  grc_STANDARD.csv  grc_STANDARD_binary_1_segments.txt  grc_STANDARD_quadri_1_segments.txt  grc_binary_BAYESIAN_1.csv  grc_binary_HIERARCHICAL_10.csv  grc_binary_HIERARCHICAL_15.csv  grc_binary_HIERARCHICAL_3.csv  grc_binary_STANDARD_1.csv  grc_mild_HIERARCHICAL_binary_3_segments.json  grc_mild_binary_HIERARCHICAL_3.csv  grc_quadri_HIERARCHICAL_10.csv  grc_quadri_HIERARCHICAL_15.csv  grc_quadri_HIERARCHICAL_3.csv  grc_quadri_STANDARD_1.csv  grc_severe_HIERARCHICAL_binary_3_segments.json  grc_severe_binary_HIERARCHICAL_3.csv  grc_sota_HIERARCHICAL_binary_3_segments.json  grc_sota_binary_HIERARCHICAL_3.csv  lat_BAYESIAN.csv  lat_BAYESIAN_binary_1_segments.txt  lat_BAYESIAN_segments.txt  lat_HIERARCHICAL.csv  (+24 more)
scripts/ocr/: generate_learned_noise.py  generate_noisy_datasets.py
scripts/train/: annotate.py  summary_data.py  train_character_embedding.py  train_character_embedding_quadri.py  train_regressive_model.py
tests/: test_bayesian_segmenters.py  test_ground_truth_annotator.py  test_hierarchical_segmenter.py  test_segmenter.py  test_word_segmenter.py
(+19 files in other folders)
