[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "src/sc_segmenter",
]

[tool.hatch.build]
include = [
  "scripts/**"
]

[project]
name = "SC_segmenter"
version = "1.0.0"
dependencies = [
  "loguru==0.7.3",
  "pandas==2.3.3",
  "nhpylm==0.0.1.1",
  "transformers==4.57.1",
  "torch==2.9.0"
]
requires-python = ">=3.11"
maintainers = [
  {name = "Sophie Robert-Hayek", email = "sophie.robert@sorbonne-universite.fr"},
]
description="Implements tools for the segmentation of Scriptio Continua manuscripts."
readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
]

[project.optional-dependencies]
dev = [
  "flake8>=7.2.0",
  "pytest>=8.3.5"
]

[tool.setuptools]
benchmark = ["scripts/benchmark/compute_scores.py"]